# nufft-ls

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: cpp.yml
bench/: bench.py
env/: environment-amd.sh  environment-clang.sh  environment-gnu.sh  environment-intel.sh
include/periodogram/: cu_periodogram.hpp  periodogram.hpp  trig_sum.hpp
src/: main.cpp
src/nufft_ls/: cpu.cpp  cuda.cu
tests/: CMakeLists.txt  data.hpp  generate_test_data.py  test_baseline.cc  test_trig_sum.cc
